# rusty-soap

./: .env  .gitignore  Cargo.toml  LICENSE  README.md  _schema.cache
src/: cache.rs  exceptions.rs  lib.rs  ns.rs  settings.rs
src/cache/: memory.rs  sqlite.rs  utils.rs
src/xsd/: const.rs  context.rs
