[package]
name = "rusty-soap"
version = "0.1.0"
authors = ["Roberts Ivanovs <robertsivanovs1999@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.11"
xmltree = "0.10"
base64 = "0.13.0"
thiserror = "1.0"
chrono = "0.4"
lazy_static = "1.4"

[dev-dependencies]
guerrilla = "0.1.4"
